--- a/rtl.css
+++ b/rtl.css
@@ -1,6 +1,16 @@
 * {
   direction: rtl;
 }
+
 .membership-pricing-table table tr td:first-child {
   text-align: left;
+}
+
+.checkbox label, .radio label {
+  padding-left: 0px !important;
+  padding-right: 20px;
+}
+.checkbox input[type=checkbox], .checkbox-inline input[type=checkbox], .radio input[type=radio], .radio-inline input[type=radio] {
+  margin-left: 0!important;
+  margin-right: -20px;
 }
